--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 
-
+twilio.AccountSID=AC99fb7100bb86e742bb1d2bdb617eba5e
+twilio.AuthToken=ee1bda3f7af5fff4b50030106b93de08
+twilio.phoneNumber=+12516162677
